# polysmith

./: .editorconfig  .gitignore  .gitmodules  .npmrc  AGENTS.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
apps/desktop-ui/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop-ui/src/: App.tsx  styles.css  vite-env-overrides.d.ts
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/src/: cad_core.rs  main.rs  protocol.rs
apps/desktop-ui/src/components/: AppHeader.tsx  BoxFeatureForm.tsx  CommandBar.tsx  DocumentPanel.tsx  FeatureTimeline.tsx  MessageLog.tsx  SelectedBoxEditor.tsx  SessionPanel.tsx  SketchToolPanel.tsx  ViewportPanel.tsx
docs/: DESIGN.md  implementation-log.md
docs/architecture/: fusion-style-behavior.md  ipc-protocol.md  overview.md  repo-map.md
docs/decisions/: 0001-tech-stack.md
docs/prompts/: codex-rules.md  tasks.md
docs/roadmap/: v1-roadmap.md
native/cad-core/: CMakeLists.txt
native/cad-core/src/: app.cpp  app.h  main.cpp
native/cad-core/src/core/: box_feature.cpp  box_feature.h  cylinder_feature.cpp  cylinder_feature.h  document.cpp  document.h  export.cpp  export.h  extrude_feature.cpp  extrude_feature.h  face_geometry.cpp  face_geometry.h  feature.h  sketch_feature.cpp  sketch_feature.h  sketch_profile.cpp  sketch_profile.h  viewport.cpp  viewport.h
native/cad-core/src/protocol/: ipc.cpp  ipc.h  serialization.cpp  serialization.h
native/cad-core/tests/: sketch_profile_test.cpp
protocol/schema/: commands.schema.json  events.schema.json
(+37 files in other folders)
